--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 .card{
     overflow: hidden;
-    max-width: 400px;
+    /* max-width: 400px; */
     /* height: 199px; */
     background-color: #2C2D2D;
     padding: 12px;
