--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -45,10 +45,13 @@
     height: 57px;
 }
 .name{
+    max-width: 180px;
     font-size: 24px;
     font-weight: 500;
     line-height: 28px;
     white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .username{
     font-size: 16px;
@@ -76,3 +79,5 @@
     font-weight: 400;
     line-height: normal;
 }
+
+
