--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -45,13 +45,16 @@
     height: 57px;
 }
 .name{
-    max-width: 180px;
+    /* max-width: 180px; */
     font-size: 24px;
     font-weight: 500;
     line-height: 28px;
-    white-space: nowrap;
+    /* white-space: nowrap;
     text-overflow: ellipsis;
-    overflow: hidden;
+    overflow: hidden; */
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Указывает количество строк, которые будут видны */
+    -webkit-box-orient: vertical;
 }
 .username{
     font-size: 16px;
