--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -53,7 +53,7 @@
     text-overflow: ellipsis;
     overflow: hidden; */
     display: -webkit-box;
-    -webkit-line-clamp: 2; /* Указывает количество строк, которые будут видны */
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 .username{
